# savehop

./: .gitignore  LICENSE  README.md  SELF_HOSTING.md  docker-compose.yml
.github/workflows/: release.yml  server.yml
app/: .env.example  index.html  package-lock.json  package.json
app/scripts/: generate-icons.mjs
app/src/: App.tsx  index.css
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/capabilities/: default.json
app/src-tauri/icons/: README.md
app/src-tauri/src/: games.rs  lib.rs  main.rs  scan.rs
app/src/lib/: api.ts  notify.ts  store.ts  ui.tsx
app/src/pages/: Home.tsx  Room.tsx  Settings.tsx
scripts/: install-watchdog.sh  savehop-watchdog.service  watchdog.sh
server/: Dockerfile  index.js  package.json  rooms.js  storage.js
