[package]
name = "savehop"
version = "0.1.4"
description = "Savehop — co-op save sync"
authors = ["Savehop contributors"]
edition = "2021"

[lib]
name = "savehop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
tauri-plugin-autostart = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
tauri-plugin-notification = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sysinfo = "0.30"
zip = { version = "2", default-features = false, features = ["deflate"] }
walkdir = "2"

[features]
custom-protocol = ["tauri/custom-protocol"]
